--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,13 +1,12 @@
 <div class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <img
-        src="https://ca-times.brightspotcdn.com/dims4/default/2553d57/2147483647/strip/true/crop/640x427+0+0/resize/1200x801!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F7f%2F81%2F5aa6f1374022a96c1af672e64a38%2Fmatt-smith-0.jpg"
-        alt=""
-      />
+      <img src="{{ photoCard }}" alt="" />
     </div>
     <div class="small-card__title">
-      <h1><a href="#">Saiu nova versão do Angular</a></h1>
+      <h1>
+        <a href="#">{{ cardTitle }}</a>
+      </h1>
     </div>
   </div>
   <div class="container__small-card__separator">
