--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,13 +3,27 @@
 </header>
 
 <app-menu-title></app-menu-title>
+
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      photoCover="https://cdn.ome.lt/Pl8jyzIkjv8TOZyZGmJUCud3liU=/1200x630/smart/extras/conteudos/house_of_dragon_dragoes.jpg"
+      cardTitle="DRAGÃO EM CAMPO DE BATALHA"
+      cardDescription="O dragão entrou no campo de batalha e virou o jogo os verdes"
+    ></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      photoCard="https://ca-times.brightspotcdn.com/dims4/default/2553d57/2147483647/strip/true/crop/640x427+0+0/resize/1200x801!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F7f%2F81%2F5aa6f1374022a96c1af672e64a38%2Fmatt-smith-0.jpg"
+      cardTitle="Deamon no Torneio"
+    ></app-small-card>
+    <app-small-card
+      photoCard="https://images2.minutemediacdn.com/image/upload/c_fill,w_720,ar_16:9,f_auto,q_auto,g_auto/shape/cover/sport/a07a12ea0bdd8c5364f21105dce0679d9531156dc747591bc5a1e847dda04828.jpg"
+      cardTitle="Sea Snake em Batalha"
+    ></app-small-card>
+    <app-small-card
+      photoCard="https://hips.hearstapps.com/hmg-prod/images/screen-shot-2022-10-05-at-11-41-01-am-1664999610.png?crop=0.7359534206695778xw:1xh;center,top&resize=1200:*"
+      cardTitle="Rei Viserys com Mascara de Ouro"
+    ></app-small-card>
   </div>
 </div>
