--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,22 +1,17 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img
-      src="https://cdn.ome.lt/Pl8jyzIkjv8TOZyZGmJUCud3liU=/1200x630/smart/extras/conteudos/house_of_dragon_dragoes.jpg"
-      alt=""
-      height="200px"
-    />
+    <img src="{{ photoCover }}" alt="" height="200px" />
   </div>
 
   <div class="big-card__title">
-    <h1><a href="#">Saiu nova versão do Angular</a></h1>
+    <h1>
+      <a href="#">{{ cardTitle }}</a>
+    </h1>
   </div>
   <div class="big-card__description">
     <p>
       <a href="#">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-        venenatis erat non rutrum dapibus. Nam nisi tortor, varius quis erat eu,
-        molestie elementum ex. Pellentesque condimentum hendrerit mi, vitae
-        efficitur ligula sollicitudin at.
+        {{ cardDescription }}
       </a>
     </p>
   </div>
