--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -1,5 +1,4 @@
 .container__content {
-  border: 1px solid white;
   width: 100%;
   height: 100%;
 
@@ -20,10 +19,23 @@
   height: 300px;
 }
 
+.content__title > h1 {
+  text-decoration: underline;
+}
+
 .content__description {
   margin-top: 15px;
 }
 
 .content__description > p {
   color: rgb(199, 196, 196);
+}
+
+.content__description > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(148, 147, 147);
+
+  margin-bottom: 10px;
 }
